# triton-learn

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  benchmark_triton.py  main.py  pyproject.toml  test_triton.py
benchmarks/: README.md  __init__.py  bench_attention.py  bench_attention_triton_vs_sota.py  bench_cases.py  bench_elementwise.py  bench_matmul.py  bench_phase1.py  bench_runner.py  compare_results.py  hardware_spec.py
notes/: 00_gpu_execution_model.md  01_triton_programming_model.md  02_memory_hierarchy.md  03_numerical_precision.md  03_triton_compiler_pipeline.md  04_cute_preview.md  04_cutile_preview.md  04_tensor_core_deep.md  05_benchmarking_methodology.md  05_cuda_to_triton.md  06_debugging_triton.md  06_kernel_patterns.md  07_flash_attention_math.md  07_triton_autograd.md  08_debugging_triton.md  08_gemm_advanced.md  09_benchmarking_methodology.md  09_tensor_core_deep.md  10_autotuning_strategy.md  10_hopper_architecture.md  11_cuda_to_triton.md  11_gemm_advanced.md  12_optimization_cases.md  13_production_checklist.md  13_triton_internals.md  14_hopper_architecture.md  14_kernel_patterns.md  15_block_pointer_api.md  15_multi_gpu.md  16_autotuning_strategy.md  16_tma_async_copy.md  17_persistent_kernels.md  17_triton_autograd.md  18_multi_gpu.md  18_numerical_precision.md  19_block_pointer_api.md  19_flash_attention_math.md  20_tma_async_copy.md  20_triton_internals.md  21_persistent_kernels.md  (+15 more)
phase1_fundamentals/: 01_vector_add.py  02_fused_softmax.py  02_sigmoid.py  03_fused_relu_bias.py  03_tanh.py  04_layer_norm.py  04_leaky_relu.py  (+59 more)
(+95 files in other folders)
